; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/devfs/extr_devfs_tree.c_dev_dup_plane.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/miscfs/devfs/extr_devfs_tree.c_dev_dup_plane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devfsmount = type { i32* }

@dev_root = common dso_local global i32 0, align 4
@devfs_nmountplanes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dev_dup_plane(%struct.devfsmount* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.devfsmount*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.devfsmount* %0, %struct.devfsmount** %3, align 8
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* @dev_root, align 4
  %7 = load %struct.devfsmount*, %struct.devfsmount** %3, align 8
  %8 = call i32 @dev_dup_entry(i32* null, i32 %6, i32** %4, %struct.devfsmount* %7)
  store i32 %8, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %5, align 4
  store i32 %11, i32* %2, align 4
  br label %19

12:                                               ; preds = %1
  %13 = load i32*, i32** %4, align 8
  %14 = load %struct.devfsmount*, %struct.devfsmount** %3, align 8
  %15 = getelementptr inbounds %struct.devfsmount, %struct.devfsmount* %14, i32 0, i32 0
  store i32* %13, i32** %15, align 8
  %16 = load i32, i32* @devfs_nmountplanes, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* @devfs_nmountplanes, align 4
  %18 = load i32, i32* %5, align 4
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %12, %10
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @dev_dup_entry(i32*, i32, i32**, %struct.devfsmount*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
